Minor updates to figures for camera-ready

--- a/notebooks/make_plots_performance_ggplot.ipynb
+++ b/notebooks/make_plots_performance_ggplot.ipynb
@@ -485,9 +485,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R [conda env:ggplot_env]",
+   "display_name": "R",
    "language": "R",
-   "name": "conda-env-ggplot_env-r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -495,7 +495,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "4.0.1"
   }
  },
  "nbformat": 4,
